--- a/assets/style.css
+++ b/assets/style.css
@@ -1,67 +1,77 @@
-body {
-  font-family: Arial;
-  text-align: center;
-  margin: 10px;
+  body {
+	background-color:  #232323;
+	margin: 0;
+	font-family: "Montserrat", "Avenir";
 }
 
-@media (min-width: 768px) {
-  body {
-    font-size: 20px;
-  }
+.square {
+	width: 30%;
+	background: purple;
+	padding-bottom: 30%;
+	float: left;
+	margin: 1.66%;
+	border-radius: 15%;
+	transition: background 0.6s;
+	-webkit-transition: background 0.6s;
+	-moz-transition: background 0.6s;
+}
+
+#container {
+	margin: 20px auto;
+	max-width: 600px;
 }
 
 h1 {
-  font-size: 2rem;
-}
-/* header{
-      w
-  } */
-
-.rgb {
-  font-size: 1.4rem;
-  text-transform: uppercase;
-}
-
-.colors {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 10px;
-  width: 80vw;
-  min-width: 300px;
-  max-width: 100vw;
-  margin: auto;
-  padding: 20px;
-}
-.colors__block {
-  height: 150px;
-  width: 50%;
-  background: #ddd;
-  cursor: pointer;
-  transition: 0.4s ease;
-  border-radius: 10px;
-}
-
-.status {
-  min-width: 300px;
-  width: 60vw;
-  margin: 20px auto;
-  font-size: 1rem;
-}
-
-.diff {
-  margin: 20px auto;
-}
-
-.diff__btn {
-  font-size: 14px;
-  border: solid 1px;
-  border-radius: 50%;
-  padding: 10px;
-  cursor: pointer;
-}
-
-.diff__btn.active {
-  background: black;
+	text-align: center;
+	line-height: 1.1;
+  font-weight: normal;
   color: white;
-  border-color: black;
+  background: steelblue;
+  margin: 0; 
+  text-transform: uppercase;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
+​
+#colorDisplay {
+  font-size: 200%;
+}
+​
+​
+#stripe {
+  background: white;
+  height: 30px;
+  text-align: center;
+  color: black;
+}
+​
+.selected {
+  color: white;
+  background: steelblue;
+}
+​
+button {
+  border: none;
+  background: none;
+  text-transform: uppercase;
+  height: 100%;
+  font-weight: 700;
+  color: steelblue;
+  letter-spacing: 1px;
+  font-size: inherit;
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  outline: none;
+}
+​
+#message {
+  display: inline-block;
+  width: 20%;
+}
+​
+button:hover {
+  color: white;
+  background: steelblue;
+}
+​
