--- a/assets/style.css
+++ b/assets/style.css
@@ -11,9 +11,9 @@
 	float: left;
 	margin: 1.66%;
 	border-radius: 15%;
-	transition: background 0.6s;
-	-webkit-transition: background 0.6s;
-	-moz-transition: background 0.6s;
+	transition:  0.6s;
+	-webkit-transition: 0.6s;
+	-moz-transition: 0.6s;
 }
 
 #container {
@@ -32,24 +32,23 @@ h1 {
   padding-top: 20px;
   padding-bottom: 20px;
 }
-​
+
 #colorDisplay {
   font-size: 200%;
 }
-​
-​
+
 #stripe {
   background: white;
   height: 30px;
   text-align: center;
   color: black;
 }
-​
+
 .selected {
   color: white;
   background: steelblue;
 }
-​
+
 button {
   border: none;
   background: none;
@@ -64,14 +63,13 @@ button {
   -moz-transition: all 0.3s;
   outline: none;
 }
-​
+
 #message {
   display: inline-block;
   width: 20%;
 }
-​
+
 button:hover {
   color: white;
   background: steelblue;
 }
-​
